added homepage image.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Buttora</title>
+        <title>Zahidul Alam Chowdhury</title>
     </head>
     <body>
-        Hello, world!
+        <img src="home.jpg">
     </body>
 </html>
