increased image size

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Zahidul Alam Chowdhury</title>
     </head>
     <body>
-        <img src="home.jpg">
+        <img src="home.jpg" height="100%">
     </body>
 </html>
