--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="stylesheet" href="styles.css">
         <title>Zahidul Alam Chowdhury</title>
     </head>
     <body>
-        <img src="home.jpg" height="100%">
+      <div id="cover"></div>
+      <div>
+        <h4 class="text"><a href="education.html">Education</a> | <a href="interests.html">Interests</a> | <a href="certificates.html">Certificates</a></h4>
+      </div>
     </body>
 </html>
