--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Zahidul Alam Chowdhury</title>
     </head>
     <body>
-      <div id="cover"></div>
+      <div id="cover">
+        <image src="home.jpg">  
+      </div>
       <div>
         <h4 class="text"><a href="education.html">Education</a> | <a href="interests.html">Interests</a> | <a href="certificates.html">Certificates</a></h4>
       </div>
