--- a/education.html
+++ b/education.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
+
         <title>Education</title>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
-    <body>
+
+    <body style="background-color:#12151a">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-#12151a">
+        <a class="navbar-brand" href="index.html">Rahee</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="education.html">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="interests.html">Interests</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="certificates.html">Certificates</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <h1 class="intro">Education</h1>
+      <table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Degree</th>
+      <th scope="col">Year</th>
+      <th scope="col">Institute</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">CS50</th>
+      <td>2019</td>
+      <td>HarvardX</td>
+    </tr>
+    <tr>
+      <th scope="row">BBA</th>
+      <td>2015</td>
+      <td>IBA, DU</td>
+    </tr>
+    <tr>
+      <th scope="row">HSC</th>
+      <td>2010</td>
+      <td>Mohsin College</td>
+    </tr>
+  </tbody>
+</table>
 
     </body>
 </html>
