--- a/interests.html
+++ b/interests.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
 
-        <title>Zahidul Alam Chowdhury</title>
+        <title>Education</title>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -36,31 +36,20 @@
         </div>
       </nav>
 
-      <div id="carousel" class="carousel" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="slide1.jpg" class="d-block w-100" alt="Rahee in suits">
-    </div>
-    <div class="carousel-item">
-      <img src="slide2.jpg" class="d-block w-100" alt="Rahee & the sea">
-    </div>
-    <div class="carousel-item">
-      <img src="slide3.jpg" class="d-block w-100" alt="What's he thinking?">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+      <h1 strong class="intro">Things I like to do!</h1>
+      <div>
+        <ul id="interests">
+        <li>Software Development</li>
+        <li>Studying Islam</li>
+        <li>Fitness</li>
+        <li>Learning new things</li>
+        <li>World Politics</li>
+        <li>Traveling</li>
+        <li>Just hanging out</li>
+        <li>Reading books</li>
+        <li>Family time!</li>
+      </ul>
       </div>
 
-      <div id="cover">
-      <p class="intro">Product Manager | Upcoming Coder | Fitness Enthusiast</P>
-      </div>
-
-      </body>
+    </body>
 </html>
