Added certificates page

--- a/certificates.html
+++ b/certificates.html
@@ -5,6 +5,17 @@
         <title>Certificates</title>
     </head>
     <body>
-
+      <h1>In possession</h1>
+      <ul class="cert">
+        <li>Google Adwords</li>
+        <li>Google Search</li>
+        <li>Google Analytics</li>
+      </ul>
+      <br>
+      <h1>Wishlist</h1>
+      <ul class="cert">
+        <li>Professional Certificate on Computer Science & Mobile Apps</li>
+        <li>PMP</li>
+      </ul>
     </body>
 </html>
